added Empfänger, Datum and Betreff. In addition, added gray hint text in the E-Mail-Box.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="headlinePersons">Personen auswählen:</string>
     <string name="KiraBegau">Kira Begau</string>
     <string name="Mama">Mama</string>
-    <string name="Papa">Papa:</string>
+    <string name="Papa">Papa</string>
     <string name="Stefan">Stefan</string>
+    <string name="DateHeadline">Datum:</string>
+    <string name="EmpfaengerHeadline">Empfänger:</string>
+    <string name="BetreffHeadline">Betreff:</string>
+
 </resources>
