deleted checkboxes (persons) and added a button with a popup-menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">EMailMessage</string>
     <string name="action_settings">Settings</string>
     <string name="headlinePersons">Personen auswählen:</string>
-    <string name="KiraBegau">Kira Begau</string>
+    <string name="KiraBegau">Kira Schatziiiii</string>
     <string name="Mama">Mama</string>
     <string name="Papa">Papa</string>
     <string name="Stefan">Stefan</string>
