added sendEmail() method and refactored.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="DateHeadline">Datum:</string>
     <string name="EmpfaengerHeadline">Empfänger:</string>
     <string name="BetreffHeadline">Betreff:</string>
+    <string name="MessageHint">Ihre Mitteilung</string>
+    <string name="chooseReceivers">Empfänger auswählen</string>
+
+
 
 </resources>
