--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">EMailMessage</string>
+    <!-- MainActivity -->
+    <string name="app_name">E-Mail-Message</string>
     <string name="action_settings">Settings</string>
     <string name="headlinePersons">Personen auswählen:</string>
     <string name="KiraBegau">Kira Schatziiiii</string>
