removed commented code (MainActivity.java), renamed button and fixed editText-hints (activity_new_person.xml/strings.xml).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,14 @@
 
     <!-- New activity -->
     <string name="NewPersonActivityHeadline">Neue Person hinzufügen</string>
-    <string name="Vorname">Vorname:</string>
-    <string name="Nachname">Nachname:</string>
-    <string name="Beruf">Beruf:</string>
-    <string name="EMailadress">E-Mail-Adresse:</string>
-    <string name="Save">Speichern</string>
+    <string name="Vorname">Vorname</string>
+    <string name="Nachname">Nachname</string>
+    <string name="Beruf">Beruf</string>
+    <string name="EMailadress">E-Mail-Adresse</string>
+    <string name="Save">Hinzufügen</string>
 
+    <string name="VornameHeadline">Vorname:</string>
+    <string name="NachnameHeadline">Nachname:</string>
+    <string name="BerufHeadline">Beruf:</string>
+    <string name="EMailadressHeadline">E-Mail-Adresse:</string>
 </resources>
