finished - refactoring and added some last things (MainActivity.java) and improved the layout (xml-files).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="EmpfaengerHeadline">Empfänger:</string>
     <string name="BetreffHeadline">Betreff:</string>
     <string name="MessageHint">Ihre Mitteilung</string>
+    <string name="ConcerningHint">Betreff</string>
     <string name="chooseReceivers">Empfänger auswählen</string>
 
     <!-- New activity -->
